tests/NormalTests/paczka1/small_fuzzy/59625019.err
Error in line 7: 1mWm S429 99,9
Error in line 11: 1mWm A715 23,9
